Inicio del proyecto y se creo la primera card

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+/* Eliminar el margen: buenas practicas */
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
